k8s-manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: app
    project: zenith-x
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
